--- a/core/templates/contactus.html
+++ b/core/templates/contactus.html
@@ -51,7 +51,7 @@
 {% for field in contactform %}
                                         <div class="col-md-12">
                                             <label class="small mb-1">{{ field.label }}</label>
-                                            {{ contactform.subject }}
+                                            {{ field }}
                                         </div>
 {% endfor %}
 
