--- a/core/templates/normaltemplate/base.html
+++ b/core/templates/normaltemplate/base.html
@@ -126,7 +126,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
   <script src="{% static 'newtemplate/js/custom.js' %}"></script>
-
+{% block javascripts %}
+{% endblock %}
 
 
 </body>
