--- a/order/templates/forms.html
+++ b/order/templates/forms.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <form action="" method="post" enctype="multipart/form-data">
+                    <form action="" id="Form" method="post" enctype="multipart/form-data">
 
                         <div class="container-sm">
 
