Umgestellt auf Customer.Profile

--- a/order/templates/email_template.html
+++ b/order/templates/email_template.html
@@ -23,7 +23,7 @@ Vorname: {{firstname}}
                   Nachname: {{lastname}}
                       </div>
                   <div>
-                  Straße: {{street}}
+                  Straße: {{address}} {{number}}
                       </div>
                       <div>
                   PLZ: {{zip}}
