--- a/order/templates/summary.html
+++ b/order/templates/summary.html
@@ -39,13 +39,16 @@ Vorname: {{context.firstname}}
                   Nachname: {{context.lastname}}
                       </div>
                   <div>
-                  Straße: {{context.street}}
+                  Straße: {{context.address}}
                       </div>
                       <div>
                   PLZ: {{context.zip}}
                           </div>
                           <div>
                   Stadt: {{context.city}}
+                              </div>
+                   <div>
+                  E-Mail: {{context.email}}
                               </div>
               </div>
 
