Insert non mandatory consent Change structure in some cases

--- a/order/templates/email_template.html
+++ b/order/templates/email_template.html
@@ -1,7 +1,7 @@
 
 Sehr geehrter Damen und Herren,
 <p>
-Sie haben bei uns einen neuen Vertrag abgeschlossen. Die von ihnen bestätigten Vertragsdokumente wie AGB, Datenschutzerklärung und Widerrufserklärung haben wir ihnen in diese E-Mail angefügt.
+Sie haben bei uns einen neuen Vertrag abgeschlossen. Der Vertrag wird unter Vertragsnummer {{ order.id }} geführt. Die von ihnen bestätigten Vertragsdokumente wie AGB, Datenschutzerklärung und Widerrufserklärung haben wir ihnen in diese E-Mail angefügt.
     </p>
 
 
